--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -11,6 +11,9 @@
   top: -35px;
   right: -35px;
 }
+.popup__close-button:hover {
+  opacity: 0.8;
+}
 @media screen and (max-width: 650px) {
   .popup__close-button {
     top: -35px;
