--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,6 +3,9 @@
   padding: 0px;
   max-width: 142px;
 }
+.header__logo:hover {
+  opacity: 0.8;
+}
 @media screen and (max-width: 930px) {
   .header__logo {
     margin-left: 27px;
