--- a/blocks/popup/__job/popup__job.css
+++ b/blocks/popup/__job/popup__job.css
@@ -4,7 +4,6 @@
   width: 358px;
   min-height: 27px;
   margin-bottom: 48px;
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -13,5 +12,6 @@
 @media screen and (max-width: 650px) {
   .popup__job {
     width: 238px;
+    margin-bottom: 45px;
   }
 }
