--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -3,12 +3,21 @@
   color: #FFFFFF;
   width: 358px;
   height: 50px;
-  margin-bottom: 37px;
+  border: none;
+  border-radius: 3px;
   cursor: pointer;
+  margin-bottom: 37px;
+  flex-shrink: 0
+}
+.popup__save-button:hover {
+  opacity: 0.8;
 }
 @media screen and (max-width: 650px) {
   .popup__save-button {
     width: 238px;
+    margin-bottom: 25px;
+    flex-basis: 46px;
     height: 46px;
+    margin-bottom: 25px;
   }
 }
