--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,7 +10,10 @@
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
-} 
+}
+.profile__add-button:hover {
+  opacity: 0.8;
+}
 @media screen and (max-width: 650px) {
   .profile__add-button {
     width: 282px;
