--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,6 +3,11 @@
   margin: 0px auto 50px;
   display: flex;
 }
+@media screen and (max-width: 930px) {
+  .profile {
+    margin: 0px 19px 50px;
+  }
+}
 @media screen and (max-width: 650px) {
   .profile {
     flex-direction: column;
