--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -7,7 +7,7 @@
   border-radius: 3px;
   cursor: pointer;
   margin-bottom: 37px;
-  flex-shrink: 0
+  flex-shrink: 0;
 }
 .popup__save-button:hover {
   opacity: 0.8;
@@ -18,6 +18,5 @@
     margin-bottom: 25px;
     flex-basis: 46px;
     height: 46px;
-    margin-bottom: 25px;
   }
 }
