--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -4,7 +4,7 @@
   background-color: #FFFFFF;
   border: none;
   width: 22px;
-  height: 19px;
+  min-height: 19px;
   margin: 30px auto 30px auto;
   padding: 0px;
   background-image: url("../../../images/like.png");
