--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-position: center;
   width: 32px;
-  height: 32px;
+  min-height: 32px;
   border: none;
   cursor: pointer;
   position: absolute;
@@ -19,6 +19,6 @@
     top: -35px;
     right: 0px;
     width: 20px;
-    height: 20px;
+    min-height: 20px;
   }
 }
