--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,17 +4,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  top: 30%;
-  left: 50%;
-  transform: translateX(-50%);
   width: 430px;
-  height: 330px;
+  min-height: 330px;
+  margin: auto;
   background-color: #FFFFFF;
   border-radius: 10px;
 }
 @media screen and (max-width: 650px) {
   .popup__container {
     width: 282px;
-    height: 322px;
   }
 }
