--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -2,7 +2,7 @@
   background-color: black;
   color: #FFFFFF;
   width: 358px;
-  height: 50px;
+  min-height: 50px;
   border: none;
   border-radius: 3px;
   cursor: pointer;
@@ -17,6 +17,6 @@
     width: 238px;
     margin-bottom: 25px;
     flex-basis: 46px;
-    height: 46px;
+    min-height: 46px;
   }
 }
