--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -8,6 +8,7 @@
   margin: 30px auto 30px auto;
   padding: 0px;
   background-image: url("../../../images/like.png");
+  background-repeat: no-repeat;
 }
 .element__button:hover {
   opacity: 0.8;
