fix: добавлена полная ветка шрифтов Inter для проекта

--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -5,7 +5,7 @@
   border: none;
   width: 22px;
   min-height: 19px;
-  margin: 30px auto 30px auto;
+  margin: 25px 25px 30px auto;
   padding: 0px;
   background-image: url("../../../images/like.png");
   background-repeat: no-repeat;
