--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -1,9 +1,7 @@
 .element__name {
-  margin: auto 0px auto 21px;
-  width: 200px;
-  font-family: Inter;
-  font-style: normal;
+  margin: 20px auto auto 21px;
   font-weight: 900;
+  width: 200px;
   font-size: 24px;
   line-height: 29px;
   text-overflow: ellipsis;
