--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,7 +1,6 @@
 .profile__subtitle {
-  font-style: normal;
-  font-weight: normal;
   font-size: 18px;
+  font-weight: 400;
   line-height: 22px;
   margin: 0px;
   padding-top: 16px;
