--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,7 +3,7 @@
   border-radius: 2px;
   box-sizing: border-box;
   border: 1px solid #FFFFFF;
-  background-image: url("../../../images/edit.png");
+  background-image: url("../../../images/edit_button.svg");
   background-repeat: no-repeat;
   background-position: center;
   min-height: 24px;
