--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,8 +5,8 @@
   background-image: url("../../../images/edit_button.svg");
   background-repeat: no-repeat;
   background-position: center;
-  height: 24px;
-  width: 24px;
+  min-height: 24px;
+  min-width: 24px;
   cursor: pointer;
   margin-left: 18px;
   align-self: center;
