--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,7 +6,7 @@
   background-color: #000000;
   border-radius: 2px;
   border: #FFFFFF solid 2px;
-  background-image: url("../../../images/plus.png");
+  background-image: url("../../../images/plus.svg");
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
