--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,6 +1,6 @@
 .popup__close-button {
   background-color: #00000000;
-  background-image: url("../../../images/close.png");
+  background-image: url("../../../images/close.svg");
   background-repeat: no-repeat;
   background-position: center;
   width: 32px;
