--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  background-color: #000000a2;
+  background-color: rgba(0,0,0, 0.5);
   width: 100vw;
   height: 100vh;
   position: fixed;
