--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,5 @@
 .popup__container {
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0,15);
   position: relative;
   display: flex;
   flex-direction: column;
