--- a/blocks/popup/__job/popup__job.css
+++ b/blocks/popup/__job/popup__job.css
@@ -1,6 +1,6 @@
 .popup__job {
   border: none;
-  border-bottom: 2px solid #0000006b;
+  border-bottom: 1px solid rgba(0,0,0, 0.2);
   width: 358px;
   min-height: 27px;
   margin-bottom: 48px;
