--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -3,7 +3,7 @@
   width: 358px;
   min-height: 27px;
   border: none;
-  border-bottom: 2px solid #0000006b;
+  border-bottom: 1px solid rgba(0,0,0, 0.2);
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
