--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,12 @@
 .header {
   max-width: 880px;
   min-height: 74px;
-  margin: 45px auto 40px;
-  border-bottom: 1px solid rgba(84,84,84, 0.5);
+  margin: 46px auto 39px;
+  border-bottom: 1px solid rgba(84,84,84, 0.7);
 }
 @media screen and (max-width: 370px) {
   .header {
     margin: 28px auto 42px;
+    min-height: 56px;
   }
 }
