--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,5 +1,5 @@
 .popup__close-button {
-  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.0);
   background-image: url("../../../images/close.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -9,8 +9,8 @@
   border: none;
   cursor: pointer;
   position: absolute;
-  top: -35px;
-  right: -35px;
+  top: -40px;
+  right: -40px;
 }
 .popup__close-button:hover {
   opacity: 0.6;
