--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,13 +1,13 @@
 .popup__container {
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0,15);
   position: relative;
+  margin-top: 56px;
+  margin-left: -15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 430px;
-  min-height: 330px;
-  margin: auto;
+  align-self: center;
   background-color: #FFFFFF;
   border-radius: 10px;
 }
