--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -5,18 +5,22 @@
   min-height: 50px;
   border: none;
   border-radius: 3px;
+  font-size: 18px;
   cursor: pointer;
   margin-bottom: 37px;
+  margin-top: 22px;
   flex-shrink: 0;
 }
 .popup__save-button:hover {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 @media screen and (max-width: 650px) {
   .popup__save-button {
     width: 238px;
+    margin-top: 15px;
     margin-bottom: 25px;
     flex-basis: 46px;
     min-height: 46px;
+    font-size: 14px;
   }
 }
