--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,9 +8,20 @@
   min-height: 24px;
   min-width: 24px;
   cursor: pointer;
-  margin-left: 18px;
+  margin-left: 20px;
   align-self: center;
+  margin-bottom: 0px;
+  margin-right: auto;
+  margin-top: 28px;
 }
 .profile__edit-button:hover {
   opacity: 0.6;
+}
+@media screen and (max-width: 370px) {
+  .profile__edit-button {
+    margin: auto 0px 8px 10px ;
+    min-height: 18px;
+    min-width: 18px;
+
+  }
 }
