--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,11 +1,13 @@
 .profile__info {
   margin: auto auto auto 30px;
-  display: flex;
-  flex-direction: column;
-  max-width: 336px;
 }
 @media screen and (max-width: 700px) {
   .profile__info {
     margin: 26px auto 36px;
+  }
+}
+@media screen and (max-width: 370px) {
+  .profile__info {
+    margin: 6px auto 12px;
   }
 }
