--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -2,15 +2,19 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
-  margin: 0px;
-  padding-top: 16px;
+  margin: 8px 0px 20px 0px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  min-height: 18px;
 }
 @media screen and (max-width: 700px) {
   .profile__subtitle {
     text-align: center;
+  }
+}
+@media screen and (max-width: 370px) {
+  .profile__subtitle {
+    font-size: 14px;
+    line-height: 16.94px;
   }
 }
