--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -2,15 +2,15 @@
   font-size: 42px;
   font-weight: 500;
   line-height: 48px;
-  margin: 0px;
+  margin: 22px 0px 0px 0px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 294px; 
+  max-width: 294px;
 }
 @media screen and (max-width: 700px) {
   .profile__title {
     font-size: 27px;
-    line-height: 33px;
+    line-height: 32.68px;
   }
 }
