--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,4 @@
 .profile {
-  min-height: 120px;
   margin: 0px auto 50px;
   display: flex;
 }
@@ -12,5 +11,6 @@
   .profile {
     flex-direction: column;
     align-self: center;
+    margin-bottom: 35px;
   }
 }
