--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   font-family: 'Inter', 'Helvetica', sans-serif;
   font-weight: 400;
-  margin: 0px auto;
+  margin: 0px;
   max-width: 1280px;
   min-width: 200px;
 }
