--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -13,6 +13,6 @@
 .element__button:hover {
   opacity: 0.5;
 }
-.element__button:active {
+/* .element__button:active {
   background-image: url("../../../images/like_active.svg");
-}
+} */
