--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -3,5 +3,5 @@
   height: 282px;
   margin: 0px;
   border-radius: 11px 11px 0 0;
-  background-color: #000000;
+  /* background-color: #000000; */
 }
