--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,7 @@
 @import url("../blocks/element/__name/element__name.css");
 @import url("../blocks/element/__button/element__button.css");
 @import url("../blocks/element/__button/_active/element__button_active.css");
+@import url("../blocks/element/__button-delete/element__button-delete.css");
 
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
