--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,4 +1,6 @@
 .popup_opened {
-  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition: visibility .5s, opacity .5s linear;
   justify-content: center;
 }
