--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,6 +5,8 @@
   position: fixed;
   top: 0px;
   left: 0px;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
   box-sizing: border-box;
 }
