--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,6 +7,8 @@
   left: 0px;
   display: flex;
   visibility: hidden;
+  justify-content: center;
   opacity: 0;
   box-sizing: border-box;
+  transition: visibility .5s, opacity .3s linear;
 }
