--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -9,6 +9,9 @@
   font-size: 14px;
   line-height: 16.94px;
 }
+.popup__field:invalid {
+  border-bottom: 1px solid #FF0000;
+}
 @media screen and (max-width: 650px) {
   .popup__field {
     width: 238px;
