--- a/pages/index.css
+++ b/pages/index.css
@@ -32,6 +32,7 @@
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__field/popup__field.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
+@import url("../blocks/popup/__save-button/_active/popup__save-button_inactive.css");
 @import url("../blocks/popup/__close-button/popup__close-button.css");
 @import url("../blocks/popup-view/popup-view.css");
 @import url("../blocks/popup-view/__image/popup-view__image.css");
@@ -41,6 +42,10 @@
 
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
+
+
+@import url("../blocks/popup/__field/error/error.css");
+@import url("../blocks/popup/__field/error/error-vis.css");
 
 
 
