--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__save-button {
+.popup__button {
   background-color: black;
   color: #FFFFFF;
   width: 358px;
@@ -11,11 +11,11 @@
   margin-top: 22px;
   flex-shrink: 0;
 }
-.popup__save-button:hover {
+.popup__button:hover {
   opacity: 0.8;
 }
 @media screen and (max-width: 650px) {
-  .popup__save-button {
+  .popup__button {
     width: 238px;
     margin-top: 15px;
     margin-bottom: 25px;
