--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup__form {
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0,15);
   position: relative;
   margin-top: 56px;
@@ -12,7 +12,7 @@
   border-radius: 10px;
 }
 @media screen and (max-width: 650px) {
-  .popup__container {
+  .popup__form {
     width: 282px;
   }
 }
