--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__field {
+.popup__input {
   margin-bottom: 28px;
   width: 358px;
   min-height: 27px;
@@ -9,11 +9,11 @@
   font-size: 14px;
   line-height: 16.94px;
 }
-.popup__field:invalid {
+.popup__input:invalid {
   border-bottom: 1px solid #FF0000;
 }
 @media screen and (max-width: 650px) {
-  .popup__field {
+  .popup__input {
     width: 238px;
   }
 }
