fix: закончить стили для браузерных ошибок, добавлены кроссбраузерные стили для отключенной кнопки формы

--- a/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -3,4 +3,9 @@
   background-color: #F7F7F7;
   opacity: 0.2;
   color: #000000;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
